Changed the Java version to 17